# Marketing-Agency

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  PORTS.md  README.md  REFERENCES.md  docker-compose.dev.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
.playwright-mcp/: page-2026-04-08T17-24-15-391Z.yml  page-2026-04-08T17-24-59-266Z.yml  page-2026-04-08T17-25-07-960Z.yml
brand/: default.json
src/: Root.tsx
src/animation/: analyze-motion.ts  compare.ts  extract-frames.ts  generate-composition.ts  index.ts
src/avatar/: hedra.ts  heygen.ts  higgsfield.ts  index.ts  pipeline.ts
src/components/: CounterNumber.tsx  Logo.tsx  SlideTransition.tsx  SplitScreen.tsx
src/compositions/: BeforeAfter.tsx  BrandIntro.tsx  CallToAction.tsx  ProductShowcase.tsx  SocialProof.tsx  StatsCounter.tsx  index.ts  schemas.ts
src/copy/: email-sequence.ts  frameworks.ts  humanize.ts  index.ts  social-posts.ts
src/ffmpeg/: analyze.ts  concat.ts
src/images/: generate.ts  index.ts  postprocess.ts  presets.ts  templates.ts  test-gemini.ts
src/pipeline/: campaign.ts
src/qa/: contact-sheet.ts  detect-errors.ts  image-check.ts  index.ts  metadata.ts
src/research/: sources.ts
templates/: before-after.json  brand-intro.json  call-to-action.json  product-showcase.json  social-proof.json  stats-counter.json
